updated to get working offline

--- a/index.html
+++ b/index.html
@@ -56,5 +56,7 @@ limitations under the License.
   </div>
   <div id="scatter-gl-container"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.min.js"></script>
-  <script src="src/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose"></script>
+  <script type="module" src="src/index.js"></script>
 </body>
